--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ gstreamer = "0.22.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.68"
 tokio = { version = "1.0", features = ["full"] }
+tower-http = { version = "=0.5.2", features = ["fs"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
