--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ publish = false
 
 [dependencies]
 axum = "0.7.5"
+cargo-watch = "8.5.2"
 ctrlc = "3.4.4"
 gstreamer = "0.22.6"
 serde = { version = "1.0", features = ["derive"] }
@@ -14,3 +15,7 @@ tokio = { version = "1.0", features = ["full"] }
 tower-http = { version = "=0.5.2", features = ["fs"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+[dev-dependencies]
+anyhow = "=1.0.86"
+httpc-test = "0.1.9"
