--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ publish = false
 [dependencies]
 axum = "0.7.5"
 cargo-watch = "8.5.2"
+config = "0.14.0"
 ctrlc = "3.4.4"
+dotenv = "0.15.0"
 gstreamer = "0.22.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.68"
