--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ dotenv = "0.15.0"
 gstreamer = "0.22.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.68"
+thiserror = "1.0.61"
 tokio = { version = "1.0", features = ["full"] }
 tower-http = { version = "=0.5.2", features = ["fs"] }
 tracing = "0.1"
