--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,19 +5,32 @@ edition = "2021"
 publish = false
 
 [dependencies]
+aide = { version = "0.13.4", features = [
+    "redoc",
+    "scalar",
+    "axum",
+    "axum-extra",
+    "macros",
+] }
 axum = { version = "0.7.5", features = ["macros"] }
+axum-extra = "0.9.6"
+axum-jsonschema = { version = "0.8.0", features = [
+    "aide",
+] }
 config = "0.14.0"
 ctrlc = "3.4.4"
 dotenv = "0.15.0"
 gstreamer = "0.22.6"
+schemars = { version = "0.8.21", features = ["uuid1"] }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0.68"
+serde_json = "1.0.133"
 thiserror = "1.0.61"
 tokio = { version = "1.0", features = ["full"] }
 tower-http = { version = "=0.5.2", features = ["fs"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+uuid = { version = "1.11.0", features = ["serde", "v4"] }
 
 [dev-dependencies]
 anyhow = "=1.0.86"
-httpc-test = "0.1.9"
+grillon = "0.6.0"
