refactor: minor renaming

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "(OSX) Launch",
+      "name": "API Launch",
       "type": "lldb",
       "request": "launch",
       "program": "${workspaceRoot}/target/debug/capture-api",
