--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,5 @@ uuid = { version = "1.11.0", features = ["serde", "v4"] }
 [dev-dependencies]
 anyhow = "=1.0.86"
 axum-test = "16.4.1"
+http-body-util = "0.1.2"
+tower = "0.5.2"
