feat: add packages for SeaORM

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ ctrlc = "3.4.4"
 dotenv = "0.15.0"
 gstreamer = "0.22.6"
 schemars = { version = "0.8.21", features = ["uuid1"] }
+sea-orm = { version = "1.1.2", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.133"
 thiserror = "1.0.61"
@@ -35,4 +36,5 @@ uuid = { version = "1.11.0", features = ["serde", "v4"] }
 anyhow = "=1.0.86"
 axum-test = "16.4.1"
 http-body-util = "0.1.2"
+sea-orm-cli = "1.1.2"
 tower = "0.5.2"
