feat: add default config for datasource

--- a/configuration/default.toml
+++ b/configuration/default.toml
@@ -6,3 +6,9 @@ port = 3000
 enabled = false
 recording_duration = 20
 output_folder = 'output'
+
+[data_source]
+enabled = true
+type = 'postgres'
+host = 'localhost'
+port = 5432
