--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,9 @@ config = "0.14.0"
 ctrlc = "3.4.4"
 dotenv = "0.15.0"
 gstreamer = "0.22.6"
+migration = { path = "migration" }
 schemars = { version = "0.8.21", features = ["uuid1"] }
-sea-orm = { version = "1.1.2", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
+sea-orm = { version = "1.1.2", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.133"
 thiserror = "1.0.61"
