--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ schemars = { version = "0.8.21", features = ["uuid1"] }
 sea-orm = { version = "1.1.2", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.133"
-thiserror = "1.0.61"
+thiserror = "2.0.9"
 tokio = { version = "1.0", features = ["full"] }
 tower-http = { version = "=0.5.2", features = ["fs"] }
 tracing = "0.1"
@@ -28,7 +28,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 uuid = { version = "1.11.0", features = ["serde", "v4"] }
 
 [dev-dependencies]
-anyhow = "=1.0.86"
+anyhow = "1.0.95"
 axum-test = "16.4.1"
 http-body-util = "0.1.2"
 sea-orm-cli = "1.1.2"
